@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

hide circle
hide methods

title US015 - Domain Model


class Agent{
name
}

class VisitRequest{
date
timeSlot
}

class Message{
 phone
 announcement
 newVisitStartTime
 newVisitEndTime
}

class Annoucement{
property
date
commissionType
commission
requestType
price
owner
}







Agent "1" -- "*" VisitRequest : lists >
VisitRequest "1"--"*" Message : has >

Annoucement "1"--"1" Agent : has >
Annoucement "1"--"1" VisitRequest : has <









@enduml